# ppr

./: API.rst  README.rst  micc3.cfg  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst
ppr/: __init__.py
tests/: __init__.py
tests/ppr/: test_ppr.py
