[tool.poetry]
name = "ppr"
version = "0.0.0"
description = "<Enter a one-sentence description of this project here.>"
authors = ["Bert Tijskens <engelbert.tijskens@uantwerpen.be>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/etijskens/ppr"
homepage = "https://github.com/etijskens/ppr"

keywords = []

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
